compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__importable_adds_extra_new_line_if_no_imports.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: ""
---
----- Completion content -----
[
    CompletionItem {
        label: "dep.wobble",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "dep",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn() -> Nil",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 0,
                        },
                        end: Position {
                            line: 1,
                            character: 0,
                        },
                    },
                    new_text: "dep.wobble",
                },
            ),
        ),
        additional_text_edits: Some(
            [
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 0,
                        },
                        end: Position {
                            line: 0,
                            character: 0,
                        },
                    },
                    new_text: "import dep\n\n",
                },
            ],
        ),
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
